Added support for ENBSeries 0.387.

--- a/optionals/ENB settings/enbseries.ini
+++ b/optionals/ENB settings/enbseries.ini
@@ -11,6 +11,8 @@ EnableLens=false
 EnableDepthOfField=false
 EnableSkylighting=true
 EnableAmbientOcclusion=true
+EnableRainReflections=true
+EnableSprites=false
 
 [COLORCORRECTION]
 UseProceduralCorrection=false
