--- a/optionals/ReShade preset (performance loss)/dxgi.ini
+++ b/optionals/ReShade preset (performance loss)/dxgi.ini
@@ -1,29 +1,65 @@
-[INPUT]
-KeyMenu=113,0,1
-KeyScreenshot=44,0,0
-InputProcessing=2
-KeyEffects=0,0,0
+[DX11_BUFFER_DETECTION]
+DepthBufferClearingNumber=0
+DepthBufferRetrievalMode=0
+UseAspectRatioHeuristics=1
 
 [GENERAL]
-PerformanceMode=1
-ScreenshotPath=ReShade\Screenshots
-EffectSearchPaths=ReShade\Shaders
-TextureSearchPaths=ReShade\Textures
-PreprocessorDefinitions=RESHADE_DEPTH_LINEARIZATION_FAR_PLANE=1000.0,RESHADE_DEPTH_INPUT_IS_UPSIDE_DOWN=0,RESHADE_DEPTH_INPUT_IS_REVERSED=0,RESHADE_DEPTH_INPUT_IS_LOGARITHMIC=0,HEAT_HAZE_STRENGTH=0.008,AMBIENT_LIGHT_STRENGTH=2.15,AO_STRENGTH=2.0,IL_STRENGTH=5.0
-TutorialProgress=3
-PresetFiles=preset.ini
+ClockFormat=0
 CurrentPreset=0
+CurrentPresetPath=preset.ini
+EffectSearchPaths=ReShade\Shaders
+FontGlobalScale=1.000000
+FPSPosition=1
+NewVariableUI=0
+NoDebugInfo=0
+NoFontScaling=0
+NoReloadOnInit=0
+PerformanceMode=1
+PreprocessorDefinitions=RESHADE_DEPTH_LINEARIZATION_FAR_PLANE=1000.0,RESHADE_DEPTH_INPUT_IS_UPSIDE_DOWN=0,RESHADE_DEPTH_INPUT_IS_REVERSED=0,RESHADE_DEPTH_INPUT_IS_LOGARITHMIC=0,HEAT_HAZE_STRENGTH=0.008,AMBIENT_LIGHT_STRENGTH=2.15,AO_STRENGTH=2.0,IL_STRENGTH=5.0
+PresetFiles=preset.ini
+PresetTransitionDelay=1000
+SaveWindowState=0
 ScreenshotFormat=1
+ScreenshotIncludePreset=0
+ScreenshotPath=ReShade\Screenshots
+ScreenshotSaveBefore=0
+ScreenshotSaveUI=0
 ShowClock=0
 ShowFPS=0
-FontGlobalScale=1.000000
-NoReloadOnInit=0
+ShowFrameTime=0
+ShowScreenshotMessage=1
+TextureSearchPaths=ReShade\Textures
+TutorialProgress=4
+
+[INPUT]
+ForceShortcutModifiers=1
+InputProcessing=2
+KeyEffects=118,0,0,0
+KeyMenu=113,0,1,0
+KeyNextPreset=0,0,0,0
+KeyPreviousPreset=0,0,0,0
+KeyReload=119,0,0,0
+KeyScreenshot=44,0,0,0
 
 [STYLE]
 Alpha=0.950000
+ChildRounding=0.000000
 ColActive=0.200000,0.500000,0.600000
-ColFPSText=1.000000,1.000000,0.000000
 ColBackground=0.275000,0.275000,0.275000
+ColFPSText=1.000000,1.000000,0.000000,1.000000
 ColItemBackground=0.447000,0.447000,0.447000
 ColText=0.800000,0.900000,0.900000
+EditorFont=
+EditorFontSize=13
+EditorStyleIndex=0
+Font=
+FontSize=13
+FPSScale=1.000000
+FrameRounding=0.000000
+GrabRounding=0.000000
+PopupRounding=0.000000
+ScrollbarRounding=0.000000
+StyleIndex=2
+TabRounding=4.000000
+WindowRounding=0.000000
 
