--- a/optionals/ReShade preset (performance loss)/preset.ini
+++ b/optionals/ReShade preset (performance loss)/preset.ini
@@ -1,8 +1,9 @@
+Effects=ReShade.fx
+KeyAmbientLight=120,0,0,0
+KeyHeatHaze=122,0,0,0
 KeyMXAO=121,0,0,0
 KeyTechMaskPixels=123,0,0,0
-KeyHeatHaze=122,0,0,0
-KeyAmbientLight=120,0,0,0
+PreprocessorDefinitions=
 Techniques=MXAO,HeatHaze,AmbientLight,TechMaskPixels
 TechniqueSorting=MXAO,HeatHaze,AmbientLight,TechMaskPixels
-Effects=ReShade.fx
 
