Updated ENB Series to version 0.447

--- a/optionals/ENB settings/enblocal.ini
+++ b/optionals/ENB settings/enblocal.ini
@@ -1,7 +1,7 @@
 [PROXY]
 EnableProxyLibrary=true
 InitProxyFunctions=false
-ProxyLibrary=ReShade64.dll
+ProxyLibrary=d3d11.dll
 
 [ENGINE]
 ForceVSync=false
@@ -22,6 +22,9 @@ KeyEditor=13
 [FIX]
 IgnoreDamageLimits=true
 DisableFakeCharacterLight=false
+DisableGameDepthOfFieldMSAABug=true
+DisableGameBlurMSAABug=true
+FixDecalsBias=true
 
 [ANTIALIASING]
 HighQualityMSAA=true
@@ -31,3 +34,6 @@ HighQualityVehicleMSAA=true
 Enable=false
 Quality=0
 DesiredFPS=20.0
+
+[GUI]
+HighResolutionScaling=true
