--- a/optionals/ENB settings/enbseries.ini
+++ b/optionals/ENB settings/enbseries.ini
@@ -3,16 +3,22 @@ UseEffect=true
 
 [EFFECT]
 UseOriginalPostProcessing=true
+UseOriginalBloom=true
 UseOriginalAberrationAndLensDistortion=false
 EnablePostPassShader=true
 EnableAdaptation=false
-EnableBloom=false
+EnableBloom=true
 EnableLens=false
 EnableDepthOfField=false
-EnableSkylighting=true
 EnableAmbientOcclusion=true
+EnableDetailedShadows=true
+EnableNormalMappingShadow=true
+EnableSkylighting=true
+EnableSubSurfaceScattering=true
+EnableSprites=true
 EnableRainReflections=true
-EnableSprites=false
+EnableShore=true
+EnableWater=true
 
 [COLORCORRECTION]
 UseProceduralCorrection=false
@@ -54,12 +60,12 @@ AmountNight=1.0
 
 [LENS]
 IgnoreWeatherSystem=true
-AmountDawn=1.0
-AmountSunrise=1.0
-AmountDay=1.0
-AmountSunset=1.0
-AmountDusk=1.0
-AmountNight=1.0
+AmountDawn=0.1
+AmountSunrise=0.1
+AmountDay=0.1
+AmountSunset=0.1
+AmountDusk=0.1
+AmountNight=0.1
 
 [GAMELENS]
 IgnoreWeatherSystem=true
@@ -138,18 +144,60 @@ CloudSaturationNight=1.0
 
 [LIGHTNATURAL]
 IgnoreWeatherSystem=true
+DirectLightingIntensityDawn=1.0
+DirectLightingIntensitySunrise=1.0
+DirectLightingIntensityDay=1.0
+DirectLightingIntensitySunset=1.0
+DirectLightingIntensityDusk=1.0
+DirectLightingIntensityNight=1.0
+DirectLightingCurveDawn=1.0
+DirectLightingCurveSunrise=1.0
+DirectLightingCurveDay=1.0
+DirectLightingCurveSunset=1.0
+DirectLightingCurveDusk=1.0
+DirectLightingCurveNight=1.0
+DirectLightingDesaturationDawn=0.0
+DirectLightingDesaturationSunrise=0.0
+DirectLightingDesaturationDay=0.0
+DirectLightingDesaturationSunset=0.0
+DirectLightingDesaturationDusk=0.0
+DirectLightingDesaturationNight=0.0
+DirectLightingColorFilterAmountDawn=0.0
+DirectLightingColorFilterAmountSunrise=0.0
+DirectLightingColorFilterAmountDay=0.0
+DirectLightingColorFilterAmountSunset=0.0
+DirectLightingColorFilterAmountDusk=0.0
+DirectLightingColorFilterAmountNight=0.0
+DirectLightingColorFilterDawn=1, 1, 1
+DirectLightingColorFilterSunrise=1, 1, 1
+DirectLightingColorFilterDay=1, 1, 1
+DirectLightingColorFilterSunset=1, 1, 1
+DirectLightingColorFilterDusk=1, 1, 1
+DirectLightingColorFilterNight=1, 1, 1
 AmbientUpIntensityDawn=1.0
 AmbientUpIntensitySunrise=1.0
 AmbientUpIntensityDay=1.0
 AmbientUpIntensitySunset=1.0
 AmbientUpIntensityDusk=1.0
 AmbientUpIntensityNight=1.0
+AmbientUpColorFilterDawn=1, 1, 1
+AmbientUpColorFilterSunrise=1, 1, 1
+AmbientUpColorFilterDay=1, 1, 1
+AmbientUpColorFilterSunset=1, 1, 1
+AmbientUpColorFilterDusk=1, 1, 1
+AmbientUpColorFilterNight=1, 1, 1
 AmbientDownIntensityDawn=1.0
 AmbientDownIntensitySunrise=1.0
 AmbientDownIntensityDay=1.0
 AmbientDownIntensitySunset=1.0
 AmbientDownIntensityDusk=1.0
 AmbientDownIntensityNight=1.0
+AmbientDownColorFilterDawn=1, 1, 1
+AmbientDownColorFilterSunrise=1, 1, 1
+AmbientDownColorFilterDay=1, 1, 1
+AmbientDownColorFilterSunset=1, 1, 1
+AmbientDownColorFilterDusk=1, 1, 1
+AmbientDownColorFilterNight=1, 1, 1
 DirectionalAmbientIntensityDawn=1.0
 DirectionalAmbientIntensitySunrise=1.0
 DirectionalAmbientIntensityDay=1.0
@@ -162,6 +210,12 @@ DirectionalAmbientSaturationDay=1.0
 DirectionalAmbientSaturationSunset=1.0
 DirectionalAmbientSaturationDusk=1.0
 DirectionalAmbientSaturationNight=1.0
+DirectionalAmbientColorFilterDawn=1, 1, 1
+DirectionalAmbientColorFilterSunrise=1, 1, 1
+DirectionalAmbientColorFilterDay=1, 1, 1
+DirectionalAmbientColorFilterSunset=1, 1, 1
+DirectionalAmbientColorFilterDusk=1, 1, 1
+DirectionalAmbientColorFilterNight=1, 1, 1
 
 [LIGHTARTIFICIAL]
 IgnoreWeatherSystem=true
@@ -207,6 +261,18 @@ VehicleBackIntensityDay=1.0
 VehicleBackIntensitySunset=1.0
 VehicleBackIntensityDusk=1.0
 VehicleBackIntensityNight=1.0
+EmergencyIntensityDawn=1.0
+EmergencyIntensitySunrise=1.0
+EmergencyIntensityDay=1.0
+EmergencyIntensitySunset=1.0
+EmergencyIntensityDusk=1.0
+EmergencyIntensityNight=1.0
+EmergencyForcedAmountDawn=1.0
+EmergencyForcedAmountSunrise=1.0
+EmergencyForcedAmountDay=1.0
+EmergencyForcedAmountSunset=1.0
+EmergencyForcedAmountDusk=1.0
+EmergencyForcedAmountNight=1.0
 
 [LIGHTSPRITE]
 IgnoreWeatherSystem=true
@@ -250,9 +316,9 @@ AmbientMinLevelSunset=0.4
 AmbientMinLevelDusk=1.0
 AmbientMinLevelNight=1.0
 AmbientSkyMixDawn=1.0
-AmbientSkyMixSunrise=1.5
-AmbientSkyMixDay=2.2
-AmbientSkyMixSunset=1.5
+AmbientSkyMixSunrise=2.5
+AmbientSkyMixDay=2.5
+AmbientSkyMixSunset=2.5
 AmbientSkyMixDusk=1.0
 AmbientSkyMixNight=1.0
 
@@ -287,6 +353,77 @@ ILAmountSunset=1.0
 ILAmountDusk=1.0
 ILAmountNight=1.0
 
+[SUBSURFACESCATTERING]
+IgnoreWeatherSystem=true
+Radius=3.0
+Amount=1.0
+EpidermalAmount=3.5
+SubdermalAmount=2.5
+EpidermalDiffuseSaturation=-1.0
+SubdermalDiffuseSaturation=0.9
+EpidermalMix=0.4
+SubdermalMix=0.7
+SubdermalTranslucency=1.0
+SubdermalPhase=1.0
+SurfaceBrightness=1.1
+
 [RAINREFLECTION]
+IgnoreWeatherSystem=true
 Quality=0
 UseLastFrame=false
+EnableWetness=true
+WetnessAmountDawn=0.1
+WetnessAmountSunrise=0.1
+WetnessAmountDay=0.1
+WetnessAmountSunset=0.1
+WetnessAmountDusk=0.1
+WetnessAmountNight=0.1
+
+[SHADOW]
+DetailedShadowQuality=0
+BumpShadowQuality=0
+BumpHeightScale=2.0
+
+[NORMALMAPPINGSHADOW]
+Quality=0
+HeightScale=1.0
+
+[SHORE]
+IgnoreWeatherSystem=true
+ReflectionAmountDawn=1.0
+ReflectionAmountSunrise=1.0
+ReflectionAmountDay=1.0
+ReflectionAmountSunset=1.0
+ReflectionAmountDusk=1.0
+ReflectionAmountNight=1.0
+DarkeningAmountDawn=0.3
+DarkeningAmountSunrise=0.3
+DarkeningAmountDay=0.3
+DarkeningAmountSunset=0.3
+DarkeningAmountDusk=0.3
+DarkeningAmountNight=0.3
+StaticWetnessDawn=1.0
+StaticWetnessSunrise=1.0
+StaticWetnessDay=1.0
+StaticWetnessSunset=1.0
+StaticWetnessDusk=1.0
+StaticWetnessNight=1.0
+DynamicWetnessDawn=1.0
+DynamicWetnessSunrise=1.0
+DynamicWetnessDay=1.0
+DynamicWetnessSunset=1.0
+DynamicWetnessDusk=1.0
+DynamicWetnessNight=1.0
+
+[WATER]
+IgnoreWeatherSystem=true
+TessellationQuality=2
+DisplaceAmountDawn=0.8
+DisplaceAmountSunrise=0.8
+DisplaceAmountDay=0.8
+DisplaceAmountSunset=0.8
+DisplaceAmountDusk=0.8
+DisplaceAmountNight=0.8
+
+[WEATHER]
+EnableMultipleWeathers=false
