Updated ENB Series 0.447 support

--- a/optionals/ENB settings/enbseries.ini
+++ b/optionals/ENB settings/enbseries.ini
@@ -19,6 +19,7 @@ EnableSprites=true
 EnableRainReflections=true
 EnableShore=true
 EnableWater=true
+EnableDetailedShadow=true
 
 [COLORCORRECTION]
 UseProceduralCorrection=false
@@ -369,23 +370,23 @@ SurfaceBrightness=1.1
 
 [RAINREFLECTION]
 IgnoreWeatherSystem=true
-Quality=0
+Quality=2
 UseLastFrame=false
 EnableWetness=true
-WetnessAmountDawn=0.1
-WetnessAmountSunrise=0.1
+WetnessAmountDawn=0.15
+WetnessAmountSunrise=0.12
 WetnessAmountDay=0.1
-WetnessAmountSunset=0.1
-WetnessAmountDusk=0.1
-WetnessAmountNight=0.1
+WetnessAmountSunset=0.12
+WetnessAmountDusk=0.15
+WetnessAmountNight=0.2
 
 [SHADOW]
-DetailedShadowQuality=0
+DetailedShadowQuality=2
 BumpShadowQuality=0
 BumpHeightScale=2.0
 
 [NORMALMAPPINGSHADOW]
-Quality=0
+Quality=2
 HeightScale=1.0
 
 [SHORE]
