--- a/optionals/ENB settings/enbseries/enbeffectpostpass.fx.ini
+++ b/optionals/ENB settings/enbseries/enbeffectpostpass.fx.ini
@@ -6,9 +6,12 @@ Progress=0.0
 Hour=13
 Minute=0
 Second=0
-Angle=0.0, 0.0, 0.0
+Angle=0, 0, 0
 Height=0.0
 Blur:: amount=1.0
 Blur:: range=1.0
 Sharp:: amount=1.0
 Sharp:: range=1.0
+Fade Out=0.0
+Heat Haze Size=0.15
+Heat Haze Speed=0.6
