ENB: Added support of prepass shader.

--- a/optionals/ENB settings/enbseries.ini
+++ b/optionals/ENB settings/enbseries.ini
@@ -19,6 +19,7 @@ EnableSprites=true
 EnableRainReflections=true
 EnableShore=true
 EnableWater=true
+EnablePrepass=false
 
 [COLORCORRECTION]
 UseProceduralCorrection=false
