Updated ENB Series to version 0.492.

--- a/optionals/ENB settings/enbseries.ini
+++ b/optionals/ENB settings/enbseries.ini
@@ -13,7 +13,7 @@ EnableDepthOfField=false
 EnableAmbientOcclusion=true
 EnableSubSurfaceScattering=true
 EnableSkylighting=true
-EnableDetailedShadow=true
+EnableDetailedShadows=true
 EnableNormalMappingShadow=true
 EnableSprites=true
 EnableRainReflections=true
@@ -271,6 +271,12 @@ EmergencyIntensityDay=1.0
 EmergencyIntensitySunset=1.0
 EmergencyIntensityDusk=1.0
 EmergencyIntensityNight=1.0
+EmergencyForcedAmountDawn=1.0
+EmergencyForcedAmountSunrise=1.0
+EmergencyForcedAmountDay=1.0
+EmergencyForcedAmountSunset=1.0
+EmergencyForcedAmountDusk=1.0
+EmergencyForcedAmountNight=1.0
 
 [LIGHTSPRITE]
 IgnoreWeatherSystem=true
@@ -379,6 +385,8 @@ WetnessAmountNight=0.2
 
 [SHADOW]
 DetailedShadowQuality=2
+BumpShadowQuality=1
+BumpHeightScale=2.0
 
 [NORMALMAPPINGSHADOW]
 Quality=2
